2011-12-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* sup/styling/torrus-schema.pl: BpsIn now uses a slightly darker
	green, so that maxline can have a better contrast.

	* perllib/Torrus/Renderer/RRDtool.pm: MAX lines can now be
	displayed in graphs. New URL variables: Gmaxline,
	Gmaxlinestep. New multigraphs parameters: maxline-style-XX,
	maxline-color-XX.

	* perllib/Torrus/DevDiscover/APC_PowerNet.pm: new discovery module

2011-11-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm, perllib/Torrus/DevDiscover.pm:
	new SNMP parameter: "snmp-maxrepetitions". The default value is 10.
	Previously Net::SNMP was setting it to 25.

2011-11-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/NetBotz.pm: added selector actions:
	Monitor, TokensetMember

2011-11-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Log.pm (enableSyslog): new config variable:
	$Torrus::Log::syslogSockOpt

2011-11-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/DevDetails.pm:
	The following methods are deprecated and will be phased out:
	storeSnmpVars(), hasOID(), snmpVar(), getSnmpIndices().
	$dd->walkSnmpTable() should be used instead.

2011-11-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configs/torrus-config.pl: New config variables for Syslog:
	$Torrus::Log::syslogFacility = 'local0';
	$Torrus::Collector::useSyslog = 1;
	$Torrus::Monitor::useSyslog = 1;

	* bin/monitor.in: disabled log rotation on SIGHUP. Syslog
	logging enabled by default.

	* bin/collector.in: disabled log rotation on SIGHUP. Syslog
	logging enabled by default.

	* perllib/Torrus/Log.pm: Syslog logging for daemons.

2011-10-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	ifSpeed monitoring is triggered by $interface->{'ifSpeedMonitoring'}.